# picture_resize

./: .gitignore  CLAUDE.md  README.md  photo_resizer.py  pyproject.toml
.claude/: settings.local.json
