[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-resizer"
version = "1.0.0"
description = "照片尺寸调整工具 - 支持多种证件照尺寸和处理方式"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["photo", "resize", "image-processing", "portrait", "certificate-photo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 基础依赖
dependencies = [
    "Pillow>=9.0.0",
]

# 可选依赖组
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

# 命令行脚本
[project.scripts]
photo-resize = "photo_resizer:main"

[project.urls]
Homepage = "https://github.com/yourusername/picture_resize"
Repository = "https://github.com/yourusername/picture_resize.git"
Issues = "https://github.com/yourusername/picture_resize/issues"

# uv 特定配置
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

# 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true